cluster/apps/default/gaseous/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaseous
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaseous
  template:
    metadata:
      labels:
        app: gaseous
    spec:
      containers:
        - name: gaseous
          image: ghcr.io/gaseous-project/gaseousserver:v1.7.14
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /root/.gaseous-server
            - name: roms
              mountPath: /roms
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gaseous-data
        - name: roms
          nfs:
            server: glacier.lab.${SECRET_LAB_DOMAIN}
            path: /mnt/tank/media/games/RetroGames
            readOnly: true
