cluster/apps/default/gaseous/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gaseous
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: gaseous
